--- a/development/assets/scss/_about.scss
+++ b/development/assets/scss/_about.scss
@@ -25,7 +25,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.4);
+    // background-color: rgba(0, 0, 0, 0.4);
   }
 
   .about-banner__text {
@@ -78,7 +78,7 @@
       h3 {
         // padding: 0 25px;
         color: $white;
-        @include font(65px, $superBold);
+        @include font(65px, $bold);
         line-height: 1;
         margin: 0;
         font-family: $Raleway;
@@ -133,7 +133,7 @@
 .main-ourorigin__item {
 
   &.main-ourorigin__item--top {
-    margin-top: 100px;
+    margin-top: 80px;
 
     @include respond-to(sm) {
       margin-top: 30px;
@@ -179,7 +179,7 @@
 }
 
 .main-ourorigin__img {
-  height: 780px;
+  height: 650px;
 
   img {
     width: 100%;
@@ -192,7 +192,7 @@
   p {
     text-align: right;
     color: $text;
-    @include font(22px, $medium);
+    @include font(18px, $medium);
     letter-spacing: 1.54px;
 
     @include respond-to(sm) {
