--- a/development/assets/scss/_poke-dots.scss
+++ b/development/assets/scss/_poke-dots.scss
@@ -42,7 +42,7 @@
 }
 
 .main-pokedots {
-  padding: 50px 50px;
+  padding: 50px 0px 50px;
 
   @include respond-to(xs) {
     padding: 20px 0;
@@ -99,7 +99,7 @@
 
 .main-pokedots__title {
   p {
-    @include font(20px, $bold);
+    @include font(18px, $bold);
     text-transform: uppercase;
     color: $text;
     margin-bottom: 0;
