--- a/development/assets/scss/_buttons.scss
+++ b/development/assets/scss/_buttons.scss
@@ -94,6 +94,12 @@ button {
     background-color: transparent;
     border: 1px solid $black;
     border-radius: 5px;
+    color: #000;
+
+    &:hover{
+      background-color: #000;
+      color: #fff;
+    }
   }
 }
 
@@ -115,8 +121,9 @@ button {
 
   &:hover {
     text-decoration: none;
-    background: #686868;
-    color: $white;
+    background: transparent;
+    color: #686868;
+    border: 1px solid #686868;
     -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
     -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
     box-shadow: 5px 40px -10px rgba(0, 0, 0, 0.57);
