--- a/development/assets/scss/_about.scss
+++ b/development/assets/scss/_about.scss
@@ -143,6 +143,24 @@
           padding: 0;
         }
       }
+      p {
+        color: $white;
+        @include font(30px, $semibold);
+        line-height: 1;
+        margin: 0;
+        font-family: $Raleway;
+        text-transform: uppercase;
+
+        @include respond-to(sm) {
+          @include font(30px, $semibold);
+          padding: 0;
+        }
+
+        @include respond-to(xs) {
+          @include font(18px, $semibold);
+          padding: 0;
+        }
+      }
     }
   }
 
