--- a/development/assets/scss/_about.scss
+++ b/development/assets/scss/_about.scss
@@ -1,5 +1,5 @@
 .about-banner {
-  background-size: contain;
+  background-size: cover;
     height: 67vh;
     position: relative;
     align-items: center;
