--- a/development/assets/scss/_entries.scss
+++ b/development/assets/scss/_entries.scss
@@ -99,8 +99,9 @@
 
 .nav-pills .nav-item.show .nav-link--tabs,
 .nav-pills .nav-link--tabs.active {
-  color: #4A4A4A;
-  background-color: #fff;
+  // color: #4A4A4A;
+  color: #B4B4B4;
+  background-color: transparent;
   border: 4px solid #707070;
   border-radius: 7px;
 }
