--- a/development/assets/scss/_ubication.scss
+++ b/development/assets/scss/_ubication.scss
@@ -1,122 +1,137 @@
 .main-ubications__content {
-  display: grid;
-  grid-template-columns: 30% 70%;
-  margin-top: 50px;
-  // grid-gap: 20px;
-
-  @include respond-to(xs) {
-    grid-template-columns: 100%;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    margin-top: 50px;
+    // grid-gap: 20px;
+  
+    @include respond-to(xs) {
+      grid-template-columns: 100%;
+    }
   }
-}
-
-.main-ubications__item {
-  padding: 20px;
-}
-
-.main-ubications__img {
-  width: 100%;
-  height: 100%;
-
-  img {
+  a
+  .main-ubications__item {
+    padding: 20px;
+  }
+  
+  .main-ubications__img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-  }
-
-  iframe {
-    width: 100%;
-    height: 400px;
-  }
-}
-
-.main-ubications__box {
-  display: grid;
-  grid-template-columns: 40% 60%;
-  margin-top: 50px;
-
-  @include respond-to(xs) {
-    grid-template-columns: 100%;
-  }
-}
-
-.main-ubications__ul {
-  padding-left: 0;
-  list-style: none;
-
-  li {
-    text-align: center;
-    padding: 5px;
-    @include font(15px, $regular);
-    letter-spacing: 1.47px;
-    color: #707070;
-
-    &:nth-child(odd) {
-      @include font(18px, $bold);
-      background-color: #B4B4B4;
-      color: $white;
-      text-transform: uppercase;
-
+  
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  
+    iframe {
+      width: 100%;
+      height: 400px;
     }
   }
-}
-
-
-.card-header {
-  padding: .75rem 1.25rem;
-  background-color: #B4B4B4;
-  border-bottom: 1px solid transparent;
-
-  h5 {
-    text-align: center;
+  
+  .main-ubications__box {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    margin-top: 50px;
+  
+    @include respond-to(xs) {
+      grid-template-columns: 100%;
+    }
   }
-
-  .btn-link {
-    color: $white;
+  
+  .main-ubications__ul {
+    padding-left: 0;
+    list-style: none;
+  
+    li {
+      text-align: center;
+      padding: 5px;
+      @include font(15px, $regular);
+      letter-spacing: 1.47px;
+      color: #707070;
+  
+      &:nth-child(odd) {
+        @include font(18px, $bold);
+        background-color: #B4B4B4;
+        color: $white;
+        text-transform: uppercase;
+  
+      }
+    }
+  }
+  
+  
+  .card-header {
+    padding: .75rem 1.25rem;
+    background-color: #B4B4B4;
+    border-bottom: 1px solid transparent;
+  
+    h5 {
+      text-align: center;
+    }
+  
+    .btn-link {
+      color: $white;
+      text-align: center;
+      text-transform: uppercase;
+      @include font(18px, $bold);
+  
+      &:hover,
+      &:active,
+      &:focus {
+        text-decoration: none;
+      }
+    }
+  }
+  
+  .card-header:first-child {
+    border-radius: 0;
+  }
+  
+  .link-ubication {
     text-align: center;
     text-transform: uppercase;
+    color: #686868;
     @include font(18px, $bold);
-
-    &:hover,
-    &:active,
-    &:focus {
+    transition: 0.3s ease-in-out;
+    border-bottom: 2px solid #686868;
+    padding: 10px;
+  
+    &.active {
+      color: $white;
+      background-color: #B4B4B4;
+      transition: 0.3s ease-in-out;
       text-decoration: none;
+  
+      &:nth-child(1) {
+        border-top: 2px solid #686868;
+      }
+    }
+  
+  
+    &:hover {
+      color: $white;
+      background-color: #B4B4B4;
+      transition: 0.3s ease-in-out;
+      text-decoration: none;
+      i{
+        color:#686868;
+      }
+    }
+    &.first-icons{
+      i{
+        font-size: 35px;
+        color:#A19E9E;
+      }
+    }
+    &.last-icons{
+      i{
+        font-size: 35px;
+        color:#686868;
+      }
     }
   }
-}
-
-.card-header:first-child {
-  border-radius: 0;
-}
-
-.link-ubication {
-  text-align: center;
-  text-transform: uppercase;
-  color: #686868;
-  @include font(18px, $bold);
-  transition: 0.3s ease-in-out;
-  border-bottom: 2px solid #686868;
-  padding: 10px;
-
-  &.active {
-    color: $white;
-    background-color: #B4B4B4;
-    transition: 0.3s ease-in-out;
-    text-decoration: none;
-
-    &:nth-child(1) {
-      border-top: 2px solid #686868;
-    }
+  
+  .card-body {
+    padding: 0;
   }
-
-
-  &:hover {
-    color: $white;
-    background-color: #B4B4B4;
-    transition: 0.3s ease-in-out;
-    text-decoration: none;
-  }
-}
-
-.card-body {
-  padding: 0;
-}
