--- a/development/assets/scss/main.scss
+++ b/development/assets/scss/main.scss
@@ -326,7 +326,7 @@ button:focus {
 
   }
 
-  .mask {
+  .mask2 {
     position: absolute;
     left: 0;
     right: 0;
@@ -479,9 +479,9 @@ button:focus {
   h2 {
     text-transform: uppercase;
     color: $white;
-    letter-spacing: 6.86px;
-    @include font(80px, $bold);
-    line-height: 1;
+    letter-spacing: 5.86px;
+    @include font(55px, $bold);
+    line-height: 0.9;
 
     @include respond-to(md) {
       letter-spacing: 0px;
@@ -504,6 +504,7 @@ button:focus {
       letter-spacing: 0px;
       @include font(60px, $bold);
       margin-bottom: 0;
+      line-height: 1;
 
       @include respond-to(md) {
         letter-spacing: 0.25px;
@@ -620,11 +621,13 @@ button:focus {
 }
 
 .main-general__description {
+  margin-top: 20px;
   p {
     letter-spacing: 2.45px;
     color: $white;
     @include font(20px, $medium);
     margin-bottom: 0;
+    line-height: 2;
 
     @include respond-to(md) {
       @include font(20px, $medium);
@@ -848,6 +851,30 @@ button:focus {
     }
   }
 
+}
+
+.main-about__contentimg{
+  background-size: cover;
+  height: 100vh;
+  background-attachment: fixed;
+  position: relative;
+  background-position: 50% -140px;
+  padding: 0!important;
+
+  &.main-about__contentimg--why{
+    height: initial;
+  }
+  img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
+  }
+  .container{
+    position: absolute;
+    top: 0;
+    left: 9%;
+  }
 }
 
 .main-about__mt {
@@ -1079,10 +1106,11 @@ button:focus {
 
 
 .main-footer__email {
-  margin-top: 20px;
+  margin-top: 10px;
 
   a {
     color: $black;
+    font-size: 14px;
 
     &:hover {
       text-decoration: none;
@@ -1126,6 +1154,7 @@ button:focus {
 
     .text-link {
       font-size: 15px;
+      text-decoration: underline;
     }
   }
 }
