--- a/development/assets/scss/_about.scss
+++ b/development/assets/scss/_about.scss
@@ -6,6 +6,11 @@
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   
 
   &.about-banner--full {
@@ -14,7 +19,22 @@
 
   .container {
     z-index: 999;
-    margin-top: 60px;
+    margin-top: 40px;
+    position: absolute;
+    left: 9%;
+    transform: translate(0%);
+
+    @include respond-to(xl){
+      left: 20%;
+    }
+
+    @include respond-to(sm){
+      left:4%;
+    }
+
+    @include respond-to(xs){
+      left:0;
+    }
 
     @include respond-to(xs) {
       margin-top: 0;
@@ -46,6 +66,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      position: absolute;
 
       h3 {
         text-shadow: 0px 4px 11px #000000AC;
@@ -244,6 +265,7 @@
     color: $text;
     @include font(16px, $medium);
     letter-spacing: 1.54px;
+    line-height: 2; 
 
     @include respond-to(sm) {
       @include font(18px, $medium);
