--- a/development/assets/scss/_work.scss
+++ b/development/assets/scss/_work.scss
@@ -74,20 +74,25 @@ label {
 }
 
 .text-link {
-  @include font(18px, $regular);
+  @include font(18px, $light);
   color: $text;
   text-transform: none;
   transition: .3s ease-in-out;
 
 
   @include respond-to(xs) {
-    @include font(15px, $regular);
+    @include font(15px, $light);
   }
 
   &.text-link--white {
     color: $white;
     text-decoration: underline;
-    font-style: italic;
+    // font-style: italic;
+    font-family: $Raleway;
+    strong{
+      font-style: italic;
+    font-family: $Raleway;
+    }
 
   }
 
@@ -198,8 +203,8 @@ input[type="checkbox"] {
   font-family: $Raleway;
 
   &:focus {
-    background:rgba(104, 104, 104, 0.24);
-    border-color: transparent !important;
+    background:#fff;
+    border-color: #686868 !important;
     outline: 0;
     box-shadow: 0 0 0 0.2rem transparent !important;
 
@@ -233,8 +238,8 @@ textarea {
 
 
   &:focus {
-    background: rgba(104, 104, 104, 0.24);
-    border-color: transparent !important;
+    background:#fff;
+    border-color: #686868 !important;
     outline: 0;
     box-shadow: 0 0 0 0.2rem transparent !important;
 
