--- a/development/assets/scss/_buttons.scss
+++ b/development/assets/scss/_buttons.scss
@@ -31,7 +31,7 @@
 }
 
 .btn--medium {
-  padding: 5px 8px;
+  padding: 5px 12px;
   // min-width: 85px;
   font-size: 17px;
 
@@ -40,7 +40,7 @@
 .btn--large {
   padding: 0px 15px;
   /* min-width: 105px; */
-  font-size: 23px;
+  font-size: 27px;
 
   @include respond-to(sm) {
     padding: 8px 8px;
@@ -86,6 +86,7 @@ button {
     text-transform: uppercase;
     font-size: 20px;
     margin-top: 10px;
+    padding: 5px;
   }
   &.btn--filled--buy {
     background-color: $past;
@@ -105,6 +106,17 @@ button {
     // border-radius: 5px;
     color: #000;
 
+    @include respond-to(sm){
+      font-size: 20px;
+      padding: 5px 15px;
+  
+    }
+    @include respond-to(xs){
+      font-size: 20px;
+      padding: 5px 15px;
+  
+    }
+
     &:hover{
       background-color: #000;
       color: #fff;
@@ -120,7 +132,7 @@ button {
   text-decoration: none;
   display: flex;
   justify-content: center;
-  text-transform: uppercase;
+  text-transform: lowercase;
   font-weight: $superBold;
   font-family: $Ostrich;
 
@@ -164,13 +176,13 @@ button {
   display: flex;
   justify-content: center;
   text-transform: uppercase;
-  font-weight: $superBold;
-  font-family: $Ostrich;
-  border-radius: 0px;
+  font-weight: 900;
+  font-family: Ostrich Sans;
+  border-radius: 0;
   font-style: italic;
-  width: 85px;
-  height: 35px;
-  font-size: 18px;
+  height: 40px;
+  font-size: 24px;
+  padding: 0px 10px;
 
   img {
     width: 20px;
@@ -202,7 +214,7 @@ button {
   }
 
   &.btn-box--resgister {
-    width: 15%;
+    width: 18%;
 
     @include respond-to(sm) {
       width: 43%;
@@ -229,6 +241,9 @@ button {
 
 .btn-modal {
   width: 40%;
+  a{
+    text-transform: lowercase;
+  }
 
   @include respond-to(md) {
     width: 45%;
