--- a/development/assets/scss/_entries.scss
+++ b/development/assets/scss/_entries.scss
@@ -80,7 +80,7 @@
     font-family: $Ostrich;
     border: 4px solid transparent;
     color: #B4B4B4;
-    padding: 10px;
+    padding: 0 10px;
 
     @include respond-to(sm) {
       @include font(16px, $bold);
@@ -100,7 +100,7 @@
 .nav-pills .nav-item.show .nav-link--tabs,
 .nav-pills .nav-link--tabs.active {
   // color: #4A4A4A;
-  color: #B4B4B4;
+  color: #707070;
   background-color: transparent;
   border: 4px solid #707070;
   border-radius: 7px;
