--- a/development/assets/scss/_modals.scss
+++ b/development/assets/scss/_modals.scss
@@ -105,6 +105,7 @@
     font-style: italic;
     font-family: $Raleway;
   }
+ 
 }
 
 
@@ -123,6 +124,7 @@
     align-items: center;
     border-radius: 0;
     min-width: 45px;
+    font-family: $Acumin;
   }
 }
 
@@ -161,12 +163,13 @@
     display: flex;
 
     span {
-      @include font(25px, $bold);
+      @include font(23px, $semibold);
       letter-spacing: 3.2px;
       color: $text;
       text-transform: uppercase;
       font-family: $Raleway;
       margin-right: 5px;
+      font-family: $Acumin;
 
       @include respond-to(md) {
         @include font(18px, $bold);
@@ -183,12 +186,13 @@
   }
 
   p {
-    @include font(25px, $bold);
-    letter-spacing: 3.2px;
+    @include font(23px, $semibold);
+    letter-spacing: 1.2px;
     color: $text;
     text-transform: uppercase;
     // font-family: $Raleway;
     margin-bottom: 0px;
+    font-family: $Acumin;
 
     @include respond-to(md) {
       @include font(18px, $bold);
