--- a/development/assets/scss/_variables.scss
+++ b/development/assets/scss/_variables.scss
@@ -16,6 +16,74 @@ $breakpoints: ('xs': "(min-width: 0px) and (max-width: 767px)",
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Acumin Pro';
+  src: url('../fonts/AcuminPro-BoldItalic.woff2') format('woff2'),
+      url('../fonts/AcuminPro-BoldItalic.woff') format('woff');
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Acumin Pro';
+  src: url('../fonts/AcuminPro-Italic.woff2') format('woff2'),
+      url('../fonts/AcuminPro-Italic.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Acumin Pro';
+  src: url('../fonts/AcuminPro-Regular.woff2') format('woff2'),
+      url('../fonts/AcuminPro-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Acumin Pro';
+  src: url('../fonts/AcuminPro-Bold.woff2') format('woff2'),
+      url('../fonts/AcuminPro-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Segoe UI';
+  src: url('../fonts/SegoeUI-BoldItalic.woff2') format('woff2'),
+      url('../fonts/SegoeUI-BoldItalic.woff') format('woff');
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Segoe UI';
+  src: url('../fonts/SegoeUI.woff2') format('woff2'),
+      url('../fonts/SegoeUI.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Segoe UI';
+  src: url('../fonts/SegoeUI-Bold.woff2') format('woff2'),
+      url('../fonts/SegoeUI-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Segoe UI';
+  src: url('../fonts/SegoeUI-Italic.woff2') format('woff2'),
+      url('../fonts/SegoeUI-Italic.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+}
+
+
+
+
+
 
 // Fonts
 $Raleway:'Raleway',
@@ -23,6 +91,8 @@ sans-serif;
 $Roboto:'Roboto',
 sans-serif;
 $Ostrich:'Ostrich Sans';
+$Acumin: 'Acumin Pro';
+$Segoe: 'Segoe UI';
 
 $light: 300;
 $regular: 400;
