--- a/development/assets/scss/_work.scss
+++ b/development/assets/scss/_work.scss
@@ -164,8 +164,27 @@ input[type="checkbox"] {
 
   &::placeholder {
     color: #898989 !important;
-    font-weight: 500;
+    font-weight: 800;
   }
+}
+
+
+
+.input-footer::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+   color: #898989 !important;
+    font-weight: 800;
+}
+.input-footer::-moz-placeholder { /* Firefox 19+ */
+   color: #898989 !important;
+    font-weight: 800;
+}
+.input-footer:-ms-input-placeholder { /* IE 10+ */
+   color: #898989 !important;
+    font-weight: 800;
+}
+.input-footer:-moz-placeholder { /* Firefox 18- */
+   color: #898989 !important;
+    font-weight: 800;
 }
 .select-ubication{
   border-radius: 0;
@@ -177,11 +196,13 @@ input[type="checkbox"] {
     font-weight: 700;
     height:50px;
     text-align-last: center;
-
+    &:active{
+      background-color: #b4b4b4;
+    }
     &:focus{
       border-color: transparent !important;
       box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0);
-      // background-color: #b4b4b4;
+      background-color: #b4b4b4;
       // color: #fff;
     }
   
